--- a/HealingArts/Map/Map.storyboard
+++ b/HealingArts/Map/Map.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bHf-al-bb1">
-    <device id="retina6_1" orientation="portrait">
+    <device id="ipad12_9rounded" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,20 +15,33 @@
             <objects>
                 <viewController id="i8u-PQ-EJu" customClass="MapViewController" customModule="HealingArts" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="yYq-tE-y3q">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="hybridFlyover" zoomEnabled="NO" scrollEnabled="NO" rotateEnabled="NO" showsUserLocation="YES" showsPointsOfInterest="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ICr-ya-rC1">
-                                <rect key="frame" x="0.0" y="128" width="414" height="734"/>
+                                <rect key="frame" x="0.0" y="144" width="1024" height="1202"/>
                             </mapView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="26Y-pG-u5y">
-                                <rect key="frame" x="0.0" y="93" width="414" height="31"/>
+                                <rect key="frame" x="0.0" y="79" width="1024" height="61"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="xi7-v0-efC"/>
+                                </constraints>
                                 <segments>
                                     <segment title="Ground Floor"/>
                                     <segment title="1st Floor"/>
                                     <segment title="2nd Floor"/>
                                     <segment title="4th Floor"/>
                                 </segments>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="xi7-v0-efC"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=regular">
+                                    <mask key="constraints">
+                                        <include reference="xi7-v0-efC"/>
+                                    </mask>
+                                </variation>
                                 <connections>
                                     <action selector="segmentChanged:" destination="i8u-PQ-EJu" eventType="valueChanged" id="Cs8-CV-Xxq"/>
                                 </connections>
@@ -46,6 +59,11 @@
                             <constraint firstItem="ICr-ya-rC1" firstAttribute="leading" secondItem="81l-KH-2Xo" secondAttribute="leading" id="jxb-lG-YnY"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="81l-KH-2Xo"/>
+                        <variation key="heightClass=regular-widthClass=regular">
+                            <mask key="constraints">
+                                <exclude reference="cFt-r2-lbv"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="4Nq-Db-LEM"/>
                     <connections>
@@ -65,14 +83,14 @@
             <objects>
                 <viewController id="4LR-qp-mLZ" customClass="SanctuaryMapViewController" customModule="HealingArts" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="JJt-bQ-zrT">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blankSanctuaryMap" translatesAutoresizingMaskIntoConstraints="NO" id="pbq-eN-4lV">
-                                <rect key="frame" x="0.0" y="179" width="414" height="563"/>
+                                <rect key="frame" x="0.0" y="165" width="1024" height="1061"/>
                             </imageView>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="mutedStandard" zoomEnabled="NO" scrollEnabled="NO" rotateEnabled="NO" pitchEnabled="NO" showsBuildings="NO" showsCompass="NO" showsPointsOfInterest="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TeY-uV-4MA">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="74" width="1024" height="1272"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </mapView>
                         </subviews>
@@ -103,11 +121,11 @@
             <objects>
                 <viewController title="Details" id="Zhf-Qy-ZFO" customClass="MapDetailViewController" customModule="HealingArts" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="M9J-Ss-2Xp">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Art Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6DT-tf-d5T">
-                                <rect key="frame" x="0.0" y="118" width="414" height="38.5"/>
+                                <rect key="frame" x="0.0" y="104" width="1024" height="38.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -146,7 +164,7 @@
                     <tabBarItem key="tabBarItem" title="Map" image="mapIcon" id="WFx-oQ-XrW"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="IbG-ir-SMA">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="24" width="1024" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" red="0.68627450980000004" green="0.062745098040000002" blue="0.17254901959999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
@@ -165,6 +183,6 @@
         <image name="mapIcon" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Nuf-ZY-hrJ"/>
+        <segue reference="uwl-ca-WCM"/>
     </inferredMetricsTieBreakers>
 </document>
