artist detail page adjusted, not artist list because I'm not sure which storyboard it is

--- a/HealingArts/ArtistDetails.storyboard
+++ b/HealingArts/ArtistDetails.storyboard
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Oxq-Tu-lSA">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Oxq-Tu-lSA">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -85,30 +87,46 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x8O-Pq-f0v">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" misplaced="YES" text="Dale Chihuly" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="whQ-3L-6bz">
-                                                <rect key="frame" x="8" y="317" width="214" height="36"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Dale Chihuly" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="whQ-3L-6bz">
+                                                <rect key="frame" x="8" y="317" width="172" height="36"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="172" id="1z3-qK-KGM"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="URWGrotesk-Reg" family="URW Grotesk" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
+                                                <variation key="heightClass=regular-widthClass=regular">
+                                                    <fontDescription key="fontDescription" name="URWGrotesk-Reg" family="URW Grotesk" pointSize="35"/>
+                                                    <mask key="constraints">
+                                                        <exclude reference="1z3-qK-KGM"/>
+                                                    </mask>
+                                                </variation>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Biography:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bm4-il-7eH">
-                                                <rect key="frame" x="8" y="368.5" width="90" height="21"/>
+                                                <rect key="frame" x="8" y="369" width="90" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
+                                                <variation key="heightClass=regular-widthClass=regular">
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                                </variation>
                                             </label>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OOV-vI-HQL">
-                                                <rect key="frame" x="0.0" y="397.5" width="414" height="447.5"/>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OOV-vI-HQL">
+                                                <rect key="frame" x="0.0" y="397.5" width="414" height="528.5"/>
                                                 <color key="backgroundColor" red="0.96703153848648071" green="0.95623332262039185" blue="0.93819808959960938" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="URWGrotesk-Lig" family="URW Grotesk" pointSize="17"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                <variation key="heightClass=regular-widthClass=regular">
+                                                    <fontDescription key="fontDescription" name="URWGrotesk-Lig" family="URW Grotesk" pointSize="25"/>
+                                                </variation>
                                             </textView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d5B-DL-cNU">
-                                                <rect key="frame" x="109" y="870" width="197" height="30"/>
+                                                <rect key="frame" x="109" y="951" width="197" height="29"/>
+                                                <fontDescription key="fontDescription" name="URWGrotesk-Reg" family="URW Grotesk" pointSize="17"/>
                                                 <state key="normal" title="Check out their website"/>
+                                                <variation key="heightClass=regular-widthClass=regular">
+                                                    <fontDescription key="fontDescription" name="URWGrotesk-Reg" family="URW Grotesk" pointSize="20"/>
+                                                </variation>
                                                 <connections>
                                                     <action selector="onButtonPressed:" destination="Oxq-Tu-lSA" eventType="touchUpInside" id="UWa-hd-HWC"/>
                                                 </connections>
@@ -116,13 +134,18 @@
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chihulypic" translatesAutoresizingMaskIntoConstraints="NO" id="QA5-ov-1Uz">
                                                 <rect key="frame" x="0.0" y="34" width="414" height="262"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="262" id="flF-iS-CIX"/>
+                                                    <constraint firstAttribute="height" constant="262" id="flF-iS-CIX">
+                                                        <variation key="heightClass=regular-widthClass=regular" constant="400"/>
+                                                    </constraint>
                                                 </constraints>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FuP-7w-vv0">
                                                 <rect key="frame" x="230" y="321" width="176" height="29.5"/>
                                                 <fontDescription key="fontDescription" name="URWGrotesk-Reg" family="URW Grotesk" pointSize="17"/>
                                                 <state key="normal" title="View Collection"/>
+                                                <variation key="heightClass=regular-widthClass=regular">
+                                                    <fontDescription key="fontDescription" name="URWGrotesk-Reg" family="URW Grotesk" pointSize="25"/>
+                                                </variation>
                                                 <connections>
                                                     <segue destination="zgh-ND-ma8" kind="show" id="cCn-7b-wTT"/>
                                                 </connections>
@@ -130,30 +153,51 @@
                                         </subviews>
                                         <color key="backgroundColor" red="0.96703153848648071" green="0.95623332262039185" blue="0.93819808959960938" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstItem="d5B-DL-cNU" firstAttribute="leading" secondItem="x8O-Pq-f0v" secondAttribute="leading" constant="109" id="1aN-9G-eE4"/>
+                                            <constraint firstItem="d5B-DL-cNU" firstAttribute="leading" secondItem="x8O-Pq-f0v" secondAttribute="leading" constant="109" id="1aN-9G-eE4">
+                                                <variation key="heightClass=regular-widthClass=regular" constant="0.0"/>
+                                            </constraint>
                                             <constraint firstItem="OOV-vI-HQL" firstAttribute="top" secondItem="FuP-7w-vv0" secondAttribute="bottom" constant="47" id="6Hn-Rj-L5S"/>
                                             <constraint firstItem="Bm4-il-7eH" firstAttribute="leading" secondItem="x8O-Pq-f0v" secondAttribute="leading" constant="8" id="7ul-c6-fhs"/>
                                             <constraint firstItem="QA5-ov-1Uz" firstAttribute="top" secondItem="x8O-Pq-f0v" secondAttribute="top" constant="34" id="Ax5-Ha-DoH"/>
                                             <constraint firstAttribute="trailing" secondItem="FuP-7w-vv0" secondAttribute="trailing" constant="8" id="CUg-iP-64d"/>
-                                            <constraint firstAttribute="trailing" secondItem="Bm4-il-7eH" secondAttribute="trailing" constant="316" id="Dta-RT-XZG"/>
+                                            <constraint firstAttribute="trailing" secondItem="Bm4-il-7eH" secondAttribute="trailing" constant="316" id="Dta-RT-XZG">
+                                                <variation key="heightClass=regular-widthClass=regular" constant="0.0"/>
+                                            </constraint>
                                             <constraint firstAttribute="height" constant="1000" id="Fqq-2u-yrz"/>
                                             <constraint firstItem="whQ-3L-6bz" firstAttribute="top" secondItem="QA5-ov-1Uz" secondAttribute="bottom" constant="21" id="G8r-Yj-hj4"/>
                                             <constraint firstItem="Bm4-il-7eH" firstAttribute="top" secondItem="whQ-3L-6bz" secondAttribute="bottom" constant="16" id="JK6-Qz-DzX"/>
                                             <constraint firstItem="FuP-7w-vv0" firstAttribute="top" secondItem="QA5-ov-1Uz" secondAttribute="bottom" constant="25" id="P6c-A6-nj2"/>
-                                            <constraint firstAttribute="bottom" secondItem="d5B-DL-cNU" secondAttribute="bottom" constant="100" id="Vfb-VF-UAo"/>
+                                            <constraint firstAttribute="bottom" secondItem="d5B-DL-cNU" secondAttribute="bottom" constant="20" id="Qqw-wM-JF4"/>
+                                            <constraint firstAttribute="bottom" secondItem="d5B-DL-cNU" secondAttribute="bottom" constant="20" id="Vfb-VF-UAo"/>
                                             <constraint firstItem="d5B-DL-cNU" firstAttribute="top" secondItem="OOV-vI-HQL" secondAttribute="bottom" constant="25" id="Yrs-cN-dpA"/>
                                             <constraint firstItem="OOV-vI-HQL" firstAttribute="top" secondItem="Bm4-il-7eH" secondAttribute="bottom" constant="8" id="bBj-XS-udU"/>
                                             <constraint firstItem="whQ-3L-6bz" firstAttribute="top" secondItem="QA5-ov-1Uz" secondAttribute="bottom" constant="21" id="c19-b6-oJX"/>
                                             <constraint firstItem="OOV-vI-HQL" firstAttribute="leading" secondItem="x8O-Pq-f0v" secondAttribute="leading" id="fZ6-v3-2LB"/>
                                             <constraint firstAttribute="trailing" secondItem="QA5-ov-1Uz" secondAttribute="trailing" id="haf-zD-FQo"/>
                                             <constraint firstItem="whQ-3L-6bz" firstAttribute="leading" secondItem="x8O-Pq-f0v" secondAttribute="leading" constant="8" id="idd-5m-aiO"/>
-                                            <constraint firstAttribute="trailing" secondItem="d5B-DL-cNU" secondAttribute="trailing" constant="108" id="ixD-8b-Ifg"/>
+                                            <constraint firstAttribute="trailing" secondItem="d5B-DL-cNU" secondAttribute="trailing" constant="108" id="ixD-8b-Ifg">
+                                                <variation key="heightClass=regular-widthClass=regular" constant="0.0"/>
+                                            </constraint>
                                             <constraint firstItem="d5B-DL-cNU" firstAttribute="top" secondItem="OOV-vI-HQL" secondAttribute="bottom" constant="25" id="pF4-Yu-6tg"/>
+                                            <constraint firstAttribute="trailing" secondItem="FuP-7w-vv0" secondAttribute="trailing" constant="10" id="qaP-WH-P3E"/>
                                             <constraint firstItem="QA5-ov-1Uz" firstAttribute="leading" secondItem="x8O-Pq-f0v" secondAttribute="leading" id="qtA-6c-X6O"/>
                                             <constraint firstAttribute="trailing" secondItem="OOV-vI-HQL" secondAttribute="trailing" id="rOJ-D2-yEC"/>
                                             <constraint firstItem="OOV-vI-HQL" firstAttribute="top" secondItem="Bm4-il-7eH" secondAttribute="bottom" constant="8" id="ycr-iF-WCg"/>
                                             <constraint firstItem="Bm4-il-7eH" firstAttribute="top" secondItem="whQ-3L-6bz" secondAttribute="bottom" constant="16" id="yi9-jS-TrK"/>
                                         </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="qaP-WH-P3E"/>
+                                                <exclude reference="Qqw-wM-JF4"/>
+                                            </mask>
+                                        </variation>
+                                        <variation key="heightClass=regular-widthClass=regular">
+                                            <mask key="constraints">
+                                                <exclude reference="qaP-WH-P3E"/>
+                                                <include reference="Qqw-wM-JF4"/>
+                                                <exclude reference="Vfb-VF-UAo"/>
+                                            </mask>
+                                        </variation>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tJs-54-KPY">
                                         <rect key="frame" x="205" y="324" width="5" height="20.5"/>
@@ -175,6 +219,11 @@
                                     <constraint firstItem="x8O-Pq-f0v" firstAttribute="centerX" secondItem="HrH-hR-DMC" secondAttribute="centerX" id="o6Q-Bk-Xkh"/>
                                     <constraint firstItem="tJs-54-KPY" firstAttribute="leading" secondItem="whQ-3L-6bz" secondAttribute="trailing" constant="25" id="yBv-fF-thF"/>
                                 </constraints>
+                                <variation key="heightClass=regular-widthClass=regular">
+                                    <mask key="subviews">
+                                        <exclude reference="tJs-54-KPY"/>
+                                    </mask>
+                                </variation>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="0.96703153848648071" green="0.95623332262039185" blue="0.93819808959960938" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
